Index root changed from /Notification/ to /
Signed-off-by: Alberto García <garcia.estevez.alberto@gmail.com>

--- a/GCMServer/src/main/resources/templates/Topics.html
+++ b/GCMServer/src/main/resources/templates/Topics.html
@@ -31,7 +31,7 @@
 			<a class="navbar-brand" href="#">GCM testing tool</a>
 		</div>
 		<ul class="nav navbar-nav">
-			<li><a href="#" th:href="@{/Notification/}">Downstream</a></li>
+			<li><a href="#" th:href="@{/}">Notifications</a></li>
 			<li><a href="#" th:href="@{/Groups/}">Groups</a></li>
 			<li class="active"><a href="#" th:href="@{/Topics/}">Topics</a></li>
 			<li><a href="#" th:href="@{/deviceManagement/}">Devices</a></li>
