Issue Notifications not opened in Android when clicking on them: field click action in notification payload changed from key value clickAction to click_action.
Signed-off-by: Alberto García <garcia.estevez.alberto@gmail.com>

--- a/GCMServer/src/main/resources/templates/Notifications.html
+++ b/GCMServer/src/main/resources/templates/Notifications.html
@@ -360,7 +360,7 @@
 													<input type="text" class="form-control"
 														id="input_notification_click_action"
 														placeholder="click_action"
-														th:field="*{notification[clickAction]}"
+														th:field="*{notification[click_action]}"
 														th:disabled="*{!enableNotification}"></input>
 												</div>
 											</div>
@@ -602,7 +602,7 @@
 													<input type="text" class="form-control"
 														id="input_notification_click_action"
 														placeholder="click_action"
-														th:field="*{notification[clickAction]}"
+														th:field="*{notification[click_action]}"
 														th:disabled="*{!enableNotification}"></input>
 												</div>
 											</div>
@@ -846,7 +846,7 @@
 													<input type="text" class="form-control"
 														id="input_notification_click_action"
 														placeholder="click_action"
-														th:field="*{notification[clickAction]}"
+														th:field="*{notification[click_action]}"
 														th:disabled="*{!enableNotification}"></input>
 												</div>
 											</div>
