--- a/GCMServer/src/main/resources/templates/Notifications.html
+++ b/GCMServer/src/main/resources/templates/Notifications.html
@@ -197,11 +197,16 @@
 								</div>
 							</div>
 							<div class="form-group">
-								<label for="input_priority" class="col-lg-4 control-label">priority</label>
+								<label for="input_priority" class="col-lg-4 control-label">High priority</label>
 								<div class="col-lg-8">
-									<input type="number" max="10" min="0" class="form-control"
+									<div class="checkbox">
+										<label> <input type="checkbox" id="input_priority"
+											th:field="*{priorityHigh}"></input>Check / Uncheck
+										</label>
+									</div>
+									<!-- <input type="number" max="10" min="0" class="form-control"
 										id="input_priority" placeholder="priority"
-										th:field="*{priority}"></input>
+										th:field="*{priority}"></input> -->
 								</div>
 							</div>
 							<div class="form-group">
@@ -284,8 +289,8 @@
 												<div class="col-lg-8">
 													<div class="checkbox">
 														<label> <input type="checkbox"
-															id="input_notification" name="enableNotification" th:field="*{enableNotification}"></input>Check
-															/ Uncheck
+															id="input_notification" name="enableNotification"
+															th:field="*{enableNotification}"></input>Check / Uncheck
 														</label>
 													</div>
 												</div>
@@ -439,11 +444,16 @@
 								</div>
 							</div>
 							<div class="form-group">
-								<label for="input_priority" class="col-lg-4 control-label">priority</label>
+								<label for="input_priority" class="col-lg-4 control-label">High priority</label>
 								<div class="col-lg-8">
-									<input type="number" max="10" min="0" class="form-control"
+									<div class="checkbox">
+										<label> <input type="checkbox" id="input_priority"
+											th:field="*{priorityHigh}"></input>Check / Uncheck
+										</label>
+									</div>
+									<!-- <input type="number" max="10" min="0" class="form-control"
 										id="input_priority" placeholder="priority"
-										th:field="*{priority}"></input>
+										th:field="*{priority}"></input> -->
 								</div>
 							</div>
 							<div class="form-group">
@@ -526,8 +536,8 @@
 												<div class="col-lg-8">
 													<div class="checkbox">
 														<label> <input type="checkbox"
-															id="input_notification" name="enableNotification" th:field="*{enableNotification}"></input>Check
-															/ Uncheck
+															id="input_notification" name="enableNotification"
+															th:field="*{enableNotification}"></input>Check / Uncheck
 														</label>
 													</div>
 												</div>
@@ -683,11 +693,16 @@
 								</div>
 							</div>
 							<div class="form-group">
-								<label for="input_priority" class="col-lg-4 control-label">priority</label>
+								<label for="input_priority" class="col-lg-4 control-label">High priority</label>
 								<div class="col-lg-8">
-									<input type="number" max="10" min="0" class="form-control"
+									<div class="checkbox">
+										<label> <input type="checkbox" id="input_priority"
+											th:field="*{priorityHigh}"></input>Check / Uncheck
+										</label>
+									</div>
+									<!-- <input type="number" max="10" min="0" class="form-control"
 										id="input_priority" placeholder="priority"
-										th:field="*{priority}"></input>
+										th:field="*{priority}"></input> -->
 								</div>
 							</div>
 							<div class="form-group">
@@ -770,8 +785,8 @@
 												<div class="col-lg-8">
 													<div class="checkbox">
 														<label> <input type="checkbox"
-															id="input_notification" name="enableNotification" th:field="*{enableNotification}"></input>Check
-															/ Uncheck
+															id="input_notification" name="enableNotification"
+															th:field="*{enableNotification}"></input>Check / Uncheck
 														</label>
 													</div>
 												</div>
